@startuml

title __VIRTWARDROBE's Class Diagram__\n

  namespace com.lilianortizcosta.virtwardrobe {
    class com.lilianortizcosta.virtwardrobe.ClothesContract {
        - ClothesContract()
    }
  }
  

  namespace com.lilianortizcosta.virtwardrobe {
    class com.lilianortizcosta.virtwardrobe.ClothesContract.ClothesEntry {
        {static} + COLUMN_NAME_CATEGORY : String
        {static} + COLUMN_NAME_COUNT : String
        {static} + COLUMN_NAME_DATE : String
        {static} + COLUMN_NAME_FAVOURITE : String
        {static} + COLUMN_NAME_TITLE : String
        {static} + TABLE_NAME : String
    }
  }
  

  namespace com.lilianortizcosta.virtwardrobe {
    class com.lilianortizcosta.virtwardrobe.ClothesDbHelper {
        {static} + DATABASE_NAME : String
        {static} + DATABASE_VERSION : int
        {static} - SQL_CREATE_ENTRIES : String
        {static} - SQL_DELETE_ENTRIES : String
        + ClothesDbHelper()
        + onCreate()
        + onDowngrade()
        + onUpgrade()
    }
  }
  

  namespace com.lilianortizcosta.virtwardrobe {
    class com.lilianortizcosta.virtwardrobe.MainActivity {
        + navController : NavController
        - biometricPrompt : BiometricPrompt
        - isUserLogged : boolean
        - promptInfo : PromptInfo
        # BiometricAuthentication()
        # LoggedUserButtons()
        # NewClotheCameraAction()
        # onCreate()
        # onResume()
        # onStop()
    }
  }
  

  namespace com.lilianortizcosta.virtwardrobe {
    class com.lilianortizcosta.virtwardrobe.NewItemFragment {
        - context : Context
        - currentPhotoPath : String
        - db : SQLiteDatabase
        - imageView : ImageView
        - itemCategory : Integer
        - newItemConfiguration : ConstraintLayout
        - photoFile : File
        + CloseScreenView()
        + MessageOnScreenView()
        + NewItemFragment()
        + createImageFile()
        + onActivityResult()
        + onCreate()
        + onCreateView()
        + onViewCreated()
    }
  }
  

  com.lilianortizcosta.virtwardrobe.ClothesContract +-down- com.lilianortizcosta.virtwardrobe.ClothesContract.ClothesEntry
  com.lilianortizcosta.virtwardrobe.ClothesContract.ClothesEntry .up.|> android.provider.BaseColumns
  com.lilianortizcosta.virtwardrobe.ClothesDbHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.lilianortizcosta.virtwardrobe.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.lilianortizcosta.virtwardrobe.NewItemFragment -up-|> androidx.fragment.app.Fragment
  com.lilianortizcosta.virtwardrobe.NewItemFragment o-- com.lilianortizcosta.virtwardrobe.MainActivity : mainActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
